--- a/index.html
+++ b/index.html
@@ -7,15 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Image Search API App</h1>
+    <h1>Fontain's Search API Site</h1>
     <form action="">
         <input type="text" id="search-input" placeholder="Seach for an image!">
         <button id="search-button">Search</button>
-
-
-
     </form>
 
-    <script src="script.js"></script>
+    <div class="search-results">
+        <div class="search-result">
+            <img src="https://images.unsplash.com/photo-1682687220211-c471118c9e92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=1000&q=60" alt="Mountains under the sky">
+            <a href="https://unsplash.com/photos/z4ELCkNmnz0" target="_blank">Mountains under the sky</a>
+        </div>
+        <div class="search-result">
+            <img src="https://images.unsplash.com/photo-1682687220211-c471118c9e92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=1000&q=60" alt="Mountains under the sky">
+            <a href="https://unsplash.com/photos/z4ELCkNmnz0" target="_blank">Mountains under the sky</a>
+        </div>
+        <div class="search-result">
+            <img src="https://images.unsplash.com/photo-1682687220211-c471118c9e92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=1000&q=60" alt="Mountains under the sky">
+            <a href="https://unsplash.com/photos/z4ELCkNmnz0" target="_blank">Mountains under the sky</a>
+        </div>
+    </div>
+
+    <button id="show-more-button">Show more</button>
+
+<script src="script.js"></script>
 </body>
 </html>
