--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Fontain's Search API Site</h1>
+    <h3>All images from unsplash</h3>
     <form action="">
         <input type="text" id="search-input" placeholder="Seach for an image!">
         <button id="search-button">Search</button>
